syntax = "proto3";

package media.admin.v1;

option go_package = "yuumi-movie/api/media/admin/v1;v1";

service MediaAdmin {
	rpc CreateMedia (CreateMediaReq) returns (CreateMediaReply) {

	};
}

message CreateMediaReq {
	int64 id = 1;
	string desc = 2;
	string cover = 3;
	string title = 4;
	string areas = 5;
	string actors = 6;
	string styles = 7;
}

message CreateMediaReply {

}

